# lightswitch

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt
include/lightswitch/: barrier.hpp  latch.hpp  lightswitch.hpp
test/: CMakeLists.txt  ts_barrier.cpp  ts_latch.cpp  ts_lightswitch.cpp
